Fixed api-docs bugs
- Fixed issue where tag wasn't being detected
- Made each autogen property on its own comment to appease its expectations
- Implemented env vars to get the "Try it out" api-docs to work locally and deployed
